Fixed bug where slides wasn't visible in IE10 and below

--- a/scss/imports/_base.scss
+++ b/scss/imports/_base.scss
@@ -12,6 +12,10 @@
 	background-color: $fade-color;
 
 	/* Slides */
+	.fs-slides {
+		height: 100%;
+	}
+
 	.fs-slide {
 		position: absolute;
 		top: 0;
